--- a/LemonSharp.VaccinationSite.API/appsettings.json
+++ b/LemonSharp.VaccinationSite.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "VaccinationSite": "Server=tcp:lemon-sharp.database.windows.net,1433;Initial Catalog=reservation;Persist Security Info=False;User ID=lemon;Password=Test@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;database=VaccinationSite;"
+  },
   "AllowedHosts": "*"
 }
