--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t lemonsharp.azurecr.io/vaccination-site:latest -t lemonsharp.azurecr.io/vaccination-site:${{ github.sha }} --label dockerfile-path=Dockerfile
+        docker build "$GITHUB_WORKSPACE/" -f  "LemonSharp.VaccinationSite.API/Dockerfile" -t lemonsharp.azurecr.io/vaccination-site:latest -t lemonsharp.azurecr.io/vaccination-site:${{ github.sha }} --label dockerfile-path=Dockerfile
         docker push lemonsharp.azurecr.io/vaccination-site:latest
         docker push lemonsharp.azurecr.io/vaccination-site:${{ github.sha }}
     
