--- a/LemonSharp.VaccinationSite.Query/LemonSharp.VaccinationSite.Query.csproj
+++ b/LemonSharp.VaccinationSite.Query/LemonSharp.VaccinationSite.Query.csproj
@@ -7,7 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="DTOs" />
+      <PackageReference Include="Dapper" Version="2.0.123" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
