--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,7 +14,9 @@ spec:
       annotations:
         dapr.io/enabled: "true"
         dapr.io/app-id: "vaccination-site"
-        dapr.io/app-port: "80"       
+        dapr.io/app-port: "80"
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "52323"   
       labels:
         app: "vaccination-site"
     spec:
@@ -46,3 +48,43 @@ spec:
               port: http
             initialDelaySeconds: 30
             periodSeconds: 30
+          env:
+          - name: DOTNET_DiagnosticPorts
+            value: /diag/port
+          volumeMounts:
+          - mountPath: /diag
+            name: diagvol
+          - mountPath: /dumps
+            name: dumpsvol
+        - name: monitor
+          image: mcr.microsoft.com/dotnet/monitor:6.0.0
+          args: [ "--no-auth" ]
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 52323
+          env:
+          - name: DOTNETMONITOR_DiagnosticPort__ConnectionMode
+            value: Listen
+          - name: DOTNETMONITOR_DiagnosticPort__EndpointName
+            value: /diag/port
+          - name: DOTNETMONITOR_Storage__DumpTempFolder
+            value: /dumps
+          - name: DOTNETMONITOR_Urls
+            value: "http://*:52323"
+          volumeMounts:
+          - mountPath: /diag
+            name: diagvol
+          - mountPath: /dumps
+            name: dumpsvol
+          resources:
+            requests:
+              cpu: 50m
+              memory: 32Mi
+            limits:
+              cpu: 80m
+              memory: 256Mi
+      volumes:
+      - name: diagvol
+        emptyDir: {}
+      - name: dumpsvol
+        emptyDir: {}
